--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </a>
             </div>
 
-            <div class="row home-content__main">
+            <div class="row home-content__main"><center>
 
                 <div class="col-eight home-content__text pull-right">
                     <h3>Welcome to Count</h3>
