--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="row home-content__main"><center>
 
-                <div class="col-eight home-content__text pull-right">
+                <div class="col-eight home-content__text pull-center">
                     <h3>Welcome to Count</h3>
 
                     <h1>
