--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             </ul> <!-- end home-social -->
 
             <div class="row home-copyright">
-                <span>Copyright Count 2018</span> 
-                <span>Design by <a href="https://www.styleshout.com/">styleshout</a></span>
+                <span>Copyright Unfazed Muslim 2023</span> 
+                <span>Design by <a href="https://unfazedmuslim.blogspot.com/p/home.html">Unfazed Muslim</a></span>
             </div> <!-- end home-copyright -->
 
 
