--- a/index.html
+++ b/index.html
@@ -49,20 +49,19 @@
                 </a>
             </div>
 
-            <div class="row home-content__main"><center>
+            <div class="row home-content__main">
 
                 <div class="col-eight home-content__text pull-center">
                     <h3>Welcome to Count</h3>
 
                     <h1>
-                    We are currently working <br>
-                    on a new super awesome <br> website.
+                    Haram Nasheeds You are listening.
                     </h1>
 
                     <p>
-                    Nulla porttitor accumsan tincidunt. Nulla quis lorem ut libero malesuada feugiat. 
-                    Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. 
-                    Pellentesque in ipsum id orci porta dapibus. Nulla quis lorem ut libero malesuada feugiat.
+                    This is a list of the Haram Nasheeds You are listening but don.t know about it i have included both the
+                    instrumental track and vocal track to convinve you that the following Nasheed is actually haram due to the
+                    presence of musical instrument in it.
                     </p>
 
                     
