--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             <div class="row home-content__main">
 
                 <div class="col-eight home-content__text pull-center">
-                    <h3>Welcome to Count</h3>
+                    <h3>Welcome to Unfazed Muslim</h3>
 
                     <h1>
-                    Haram Nasheeds You are listening.
+                    Nasheeds You are listening that are Haram.
                     </h1>
 
                     <p>
-                    This is a list of the Haram Nasheeds You are listening but don.t know about it i have included both the
+                    This is a list of some Haram Nasheeds You are listening but don't know about it, I have included both the
                     instrumental track and vocal track to convinve you that the following Nasheed is actually haram due to the
                     presence of musical instrument in it.
                     </p>
