--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     ================================================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    
+    <style>
+        div.scroll
+        {
+            Width-5px;
+            Height-10 px;
+            Overflow-x:scroll;
+        }
+    </style>
 
 </head>
 
