--- a/index.html
+++ b/index.html
@@ -93,16 +93,7 @@
                 <a href="https://www.facebook.com/profile.php?id=100089671203380"><i class="fab fa-facebook-f" aria-hidden="true"></i><span>Facebook</span></a>
                 </li>
                 <li>
-                <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
-                </li>
-                <li>
                 <a href="https://www.instagram.com/unfazed_muslim/"><i class="fab fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
-                </li>
-                <li>
-                <a href="#0"><i class="fab fa-behance" aria-hidden="true"></i><span>Behance</span></a>
-                </li>
-                <li>
-                <a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i><span>Dribbble</span></a>
                 </li>
             </ul> <!-- end home-social -->
 
@@ -121,7 +112,7 @@
 
     <!-- info
     ================================================== -->
-    <a class="info-toggle" href="#0">
+    <a class="info-toggle" href="https://unfazedmuslim.blogspot.com/p/home.html">
         <span class="info-menu-icon"></span>
     </a>
 
@@ -130,19 +121,21 @@
         <div class="row info-wrapper">
 
             <div class="col-seven tab-full info-main">
-                <h1>We are Count. We make awesome stuff.</h1>
+                <h1>Unfazed Muslim Best Islamic Content Source</h1>
                 <p>
-                Quisque velit nisi, pretium ut lacinia in, elementum id enim. Mauris blandit aliquet elit, 
-                eget tincidunt nibh pulvinar a. Quisque velit nisi, pretium ut lacinia in, elementum id enim. 
-                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; 
-                Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
+                We focus on creating content that is beneficial for the ummah watching our content because today
+                most of the islamic pages are uploading usless uislamic content which is basically entertainment
+                in the name of islam. The social media feed of most of our ummah is filed with such useless or
+                unauthentic content and haram nasheeds in the background of such content. this is damaging our
+                ummah so we decided to change it.
                 </p>
 
                 <p>
-                Officiis nostrum adipisci minima. Enim tenetur animi ipsum a itaque temporibus necessitatibus. 
-                Dolores ad perspiciatis. Voluptatem et molestiae adipisci laboriosam assumenda. Deleniti vero 
-                labore eos repudiandae. Vel commodi tenetur ex quia. Quisque velit nisi, pretium ut lacinia in, 
-                elementum id enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere.
+                I am not a scholar but i have minimum amount of required knowledge for making such content
+                and commitment i focus more on the scholarly opinion rather than my own interpretations. So
+                it's completely fine if you wish to follow my content as i try my level best to make the most
+                authentic content for our ummah and i am only doing this for gaining good deeds in my account
+                and not for showing off. Peace be upon You
                 </p>
             </div>
 
@@ -151,8 +144,7 @@
                 <div class="info-block">
                     <h3>Start A Conversation</h3>
                     <p>
-                        <a href="mailto:#0" class="info-email">mailus@ourwebsite.com</a><br>
-                        <a href="tel:+18587338912" class="'info-phone">+1.858.733.8912</a>
+                        <a href="#0" class="info-email">unfazedmuslim447@gmail.com</a><br>
                     </p>
                 </div>
 
@@ -160,9 +152,7 @@
                     <h3>Visit Our Office</h3>
                     
                     <p class="info-address">
-                        1600 Amphitheatre Parkway<br>
-                        Mountain View, CA<br>
-                        94043 US
+                        Mumbai, India
                     </p>
                 </div>
 
@@ -171,24 +161,12 @@
                     
                     <ul class="info-social">
                         <li>
-                            <a href="#0"><i class="fab fa-facebook" aria-hidden="true"></i>
+                            <a href="https://www.facebook.com/profile.php?id=100089671203380"><i class="fab fa-facebook" aria-hidden="true"></i>
                             <span>Facebook</span></a>
                         </li>
                         <li>
-                            <a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i>
-                            <span>Twiiter</span></a>
-                        </li>
-                        <li>
-                            <a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i>
+                            <a href="https://www.instagram.com/unfazed_muslim/"><i class="fab fa-instagram" aria-hidden="true"></i>
                             <span>Instagram</span></a>
-                        </li>
-                        <li>
-                            <a href="#0"><i class="fab fa-behance" aria-hidden="true"></i>
-                            <span>Behance</span></a>
-                        </li>
-                        <li>
-                            <a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i>
-                            <span>Dribbble</span></a>
                         </li>
                     </ul>
                 </div>
