--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="row info-wrapper">
 
             <div class="col-seven tab-full info-main">
-                <h1>Unfazed Muslim Best Islamic Content Source</h1>
+                <h1>Unfazed Muslim Best Islamic Content Source.</h1>
                 <p>
                 We focus on creating content that is beneficial for the ummah watching our content because today
                 most of the islamic pages are uploading usless uislamic content which is basically entertainment
@@ -135,21 +135,21 @@
                 and commitment i focus more on the scholarly opinion rather than my own interpretations. So
                 it's completely fine if you wish to follow my content as i try my level best to make the most
                 authentic content for our ummah and i am only doing this for gaining good deeds in my account
-                and not for showing off. Peace be upon You
+                and not for showing off. Peace be upon You.
                 </p>
             </div>
 
             <div class="col-four tab-full pull-right info-contact">
 
                 <div class="info-block">
-                    <h3>Start A Conversation</h3>
+                    <h3>E-mail</h3>
                     <p>
                         <a href="#0" class="info-email">unfazedmuslim447@gmail.com</a><br>
                     </p>
                 </div>
 
                 <div class="info-block">
-                    <h3>Visit Our Office</h3>
+                    <h3>Where are we from?</h3>
                     
                     <p class="info-address">
                         Mumbai, India
