--- a/index.html
+++ b/index.html
@@ -70,10 +70,8 @@
                 </div>  <!-- main content 1 -->
                 
             </div>  <!-- editable end -->
-        </div>  <!-- main content 1 -->
             
-    <div class="huehuehue-our__textx">
-        <h4><b>1. Kun Anta 5</b>/<br />
+    <h4><b>1. Kun Anta 6</b></h4><h4>/<br />
         Yes, one of the most popular and favorite Nasheeds of our Ummah is actually Haram.<br />
         Link to the Haram Versions<br />
         1-<br />
@@ -83,6 +81,7 @@
         Vocals OnIy Tack -<br />
         Listen &amp; Download The Halal Version Here<br></h4>
     </div>
+        </div>  <!-- main content 1 -->
 
             <ul class="home-social">
                 <li>
