--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>  <!-- main content 1 -->
                 
             </div>  <!-- editable end -->
-            
+<div class="huehuehue-our__textx">        
     <h4><b>1. Kun Anta 6</b></h4><h4>/<br />
         Yes, one of the most popular and favorite Nasheeds of our Ummah is actually Haram.<br />
         Link to the Haram Versions<br />
