--- a/index.html
+++ b/index.html
@@ -71,15 +71,7 @@
                 
             </div>  <!-- editable end -->
 <div class="huehuehue-our__textx">        
-    <h4><b>1. Kun Anta 6</b></h4><h4>/<br />
-        Yes, one of the most popular and favorite Nasheeds of our Ummah is actually Haram.<br />
-        Link to the Haram Versions<br />
-        1-<br />
-        2-<br />
-        &amp; So on with the other Lofi or Vocals Only versions<br />
-        Reason - Imitating the kuffar<br />Instrumental Track (Haram Part) -<br />
-        Vocals OnIy Tack -<br />
-        Listen &amp; Download The Halal Version Here<br></h4>
+    <h4><b>1. Kun Anta 4</b><br />Yes, one of the most popular and favorite Nasheeds of our Ummah is actually Haram.<br />Link to the Haram Versions<br />1-<br />2-<br />&amp; So on with the other Lofi or Vocals Only versions<br />Reason - Imitating the kuffar<br />Instrumental Track (Haram Part) -<br />Vocals OnIy Tack -<br />Listen &amp; Download The Halal Version Here</h4>
     </div>
         </div>  <!-- main content 1 -->
 
