--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 
             </div>  <!-- editable end -->
 <div class="huehuehue-our__textx">        
-    <h4><b>1. Kun Anta 6</b><br />Yes, one of the most popular and favorite Nasheeds of our Ummah is actually Haram.<br />Link to the Haram Versions<br />1-<br />2-<br />&amp; So on with the other Lofi or Vocals Only versions<br />Reason - Imitating the kuffar<br />Instrumental Track (Haram Part) -<br />Vocals OnIy Tack -<br />Listen &amp; Download The Halal Version Here</h4>
+    <div style="text-align: left;"><h3 style="text-align: left;"></h3><h4 style="text-align: left;"><b>1. Kun Anta<br /></b><span style="font-weight: normal;">Yes, one of the most popular and favorite Nasheeds of our Ummah is actually Haram.<br /></span><span style="font-weight: normal;">Link to the Haram Versions<br /></span><span style="font-weight: normal;">1-<br /></span><span style="font-weight: normal;">2-<br /></span><span style="font-weight: normal;">&amp; So on with the other Lofi or Vocals Only versions<br /></span><span style="font-weight: normal;">Reason - Imitating the kuffar<br /></span><span style="font-weight: normal;">Instrumental Track (Haram Part) -<br /></span><span style="font-weight: normal;">Vocals OnIy Tack -<br /></span><span style="font-weight: normal;">Listen &amp; Download The Halal Version Here</span></h4></div>
     </div>
         </div>  <!-- main content 1 -->
 
