--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Unfazed Muslim Post</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Islam">
+    <meta name="author" content="Unfazed Muslim">
 
     <!-- mobile specific metas
     ================================================== -->
